2005-07-12  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tclExtdInt.h (TclXOSGetSelectFnum): use int for fd
	* unix/tclXunixOS.c (TclXOSGetSelectFnum):    (reverses change from
	* win/tclXwinOS.c (TclXOSGetSelectFnum):      2005-04-26) as TclX
	* generic/tclXselect.c: 	              uses -1 in handles
	to indicate unused fd for select.

2005-07-07  Jeff Hobbs  <jeffh@ActiveState.com>

	* unix/tclXunixOS.c (TclXOSWalkDir): undef readdir as Tcl 8.4 did
	ifdef'ery that was unnecessary and screwed up threaded builds.

2005-04-26  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tclXbsearch.c (ReadAndCompare): Fix Tcl_Tell return casts
	* generic/tclXdup.c (DupFileChannel):     as it take Tcl_WideInt,
	* generic/tclXfilescan.c (ScanFile):      but off_t is long on Win.
	* generic/tclXselect.c (ParseSelectFileList): 

	* generic/tclExtdInt.h (TclXOSGetSelectFnum): take unsigned int
	* unix/tclXunixOS.c (TclXOSGetSelectFnum):    for fd
	* win/tclXwinOS.c (TclXOSGetSelectFnum):
	(TclXOSftruncate): fix cast from Tcl_Tell

2005-03-28  Jeff Hobbs  <jeffh@ActiveState.com>

	* configure, configure.in:
	* Makefile.in (PKG_OBJECTS): add @LIBOBJS@ to needed objects.

2005-03-25  Jeff Hobbs  <jeffh@ActiveState.com>

	* configure, configure.in: AC_PROG_LN_S no longer needed
	* tests/help.test: correct help tests to use correct help dir
	* Makefile.in: doc target cleanup (das)
	Add helpclean target and make help not rebuild always.
	Add TCLX_HELP_DIR to TCLSH_ENV.

	* license.terms (new): minimal license terms file

	* library/buildhelp.tcl (buildhelp): redir 2>/dev/null for exec
	col check. (das)

	* unix/tclXunixPort.h: undef panic for __APPLE__ (das)

2005-03-24  Jeff Hobbs  <jeffh@ActiveState.com>

	* Makefile.in, tclconfig/tcl.m4: Get AIX wide int type right.
	* configure, configure.in:       Use 'tclx' PACKAGE_NAME, but load
	'Tclx'.

2005-03-23  Jeff Hobbs  <jeffh@ActiveState.com>

	* Makefile.in, tclconfig/tcl.m4: Update to TEA 3.2, refactoring